WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191210
[IntersectionObserver] Fix isIntersecting computation when 0 is not a threshold
https://bugs.webkit.org/show_bug.cgi?id=191210
Summary
[IntersectionObserver] Fix isIntersecting computation when 0 is not a threshold
Ali Juma
Reported
2018-11-02 14:27:23 PDT
isIntersecting should be false if the intersection ratio is smaller than the smallest threshold value. We currently set it to true whenever the intersection ratio is non-zero, but that's incorrect if the smallest threshold is non-zero.
Attachments
Patch
(3.28 KB, patch)
2018-11-02 14:31 PDT
,
Ali Juma
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ali Juma
Comment 1
2018-11-02 14:31:35 PDT
Created
attachment 353732
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-05 06:47:49 PST
Comment on
attachment 353732
[details]
Patch Clearing flags on attachment: 353732 Committed
r237798
: <
https://trac.webkit.org/changeset/237798
>
WebKit Commit Bot
Comment 3
2018-11-05 06:47:51 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-05 06:48:24 PST
<
rdar://problem/45806230
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug