[IntersectionObserver] Fix isIntersecting computation when 0 is not a threshold https://bugs.webkit.org/show_bug.cgi?id=191210

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

Update expectation for test that now passes.

* web-platform-tests/intersection-observer/initial-observation-with-threshold-expected.txt:

Source/WebCore:

isIntersecting should be false if the intersection ratio is smaller than the
smallest threshold value. Update the computation of isIntersecting to depend on
the current thresholdIndex.

Test: imported/w3c/web-platform-tests/intersection-observer/initial-observation-with-threshold-expected.html

* dom/Document.cpp:
(WebCore::Document::updateIntersectionObservations):


Canonical link: https://commits.webkit.org/206056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237798 268f45cc-cd09-0410-ab3c-d52691b4dbfc